--- a/package.json
+++ b/package.json
@@ -167,5 +167,6 @@
     "node": ">=16.0.0",
     "yarn": ">=1.22.0",
     "npm": "please-use-yarn"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
